# shire

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  shire.toml.example
.github/: release.yml
.github/workflows/: docs.yml  pr-labeler.yml  release.yml
docs/: CNAME  book.toml
docs/plans/: 2026-02-25-shire-design.md  2026-02-25-shire-implementation.md
docs/src/: SUMMARY.md  architecture.md  claude-code.md  claude-desktop.md  configuration.md  ecosystems.md  installation.md  introduction.md  mcp-prompts.md  mcp-tools.md  quick-start.md  watch-daemon.md
openspec/changes/add-protobuf-support/: design.md  tasks.md
openspec/changes/batch-db-operations/: proposal.md
openspec/changes/build-timing-instrumentation/: proposal.md
openspec/changes/incremental-file-indexing/: design.md
openspec/changes/incremental-indexing/: tasks.md
openspec/changes/source-hash-mtime-precheck/: proposal.md
openspec/specs/configuration/: spec.md
openspec/specs/dependency-graph/: spec.md
openspec/specs/file-index/: spec.md
openspec/specs/gradle-parsing/: spec.md
src/: config.rs  main.rs
src/db/: mod.rs  queries.rs
src/index/: cargo.rs  custom_discovery.rs  go.rs  go_work.rs  gradle.rs  gradle_settings.rs  hash.rs  manifest.rs  maven.rs  mod.rs  npm.rs  perl.rs  python.rs  ruby.rs
src/mcp/: mod.rs  prompts.rs  tools.rs
src/symbols/: go.rs  java.rs  kotlin.rs  mod.rs  perl.rs  proto.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs  walker.rs
src/watch/: daemon.rs  mod.rs  protocol.rs
tests/: integration.rs
(+83 files in other folders)
