[package]
name = "shire"
version = "0.1.4-beta"
edition = "2024"
description = "One index to rule them all — Search, Hierarchy, Index, Repo Explorer, a monorepo MCP-first indexer"
license = "MIT"
keywords = ["monorepo", "mcp", "index", "search"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.36", features = ["bundled"] }
rmcp = { version = "0.3", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
glob = "0.3"
walkdir = "2"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
rayon = "1"
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-proto = "0.2"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-ruby = "0.23"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.36", features = ["bundled"] }
